syntax = "proto3";
package tasks;

import "common.proto";

service BeaconService {
  // Client requests to connect and will get a ConnectionResponse if successful.
  rpc Connection(ConnectionRequest) returns (ConnectionResponse);

  // Poll requests tasking from the server
  rpc Poll(PollRequest) returns (PollResponse);

  // Output establishes a stream of tasking output
  rpc Output(stream OutputRequest) returns (OutputResponse);
}

message ConnectionRequest {}

message ConnectionResponse {
  common.Uuid uuid = 1;
  uint32 heartbeat = 2;
}

message PollRequest {
  common.Uuid uuid = 1;
}

message PollResponse {
  optional common.Task task = 2;
}

message OutputRequest {
  common.Uuid task_uuid = 1;
  string line = 2;
}

message OutputResponse {}
